--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -48,7 +48,7 @@
   }
   
   .nav-item {
-    height: 80px;
+    height: 60px;
   }
   
   .nav-links {
@@ -86,9 +86,10 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 90vh;
+      height: 100vh;
       position: absolute;
-      top: 80px;
+      background-color: transparent;
+      top: 60px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -97,7 +98,7 @@
     .nav-menu.active {
       background: #242222;
       left: 0;
-      opacity: 1;
+      opacity: 0.7;
       transition: all 0.5s ease;
       z-index: 1;
     }
@@ -119,7 +120,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      transform: translate(25%, 50%);
+      transform: translate(100%, 25%);
     }
   
     .menu-icon {
@@ -127,7 +128,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      transform: translate(-100%, 60%);
+      transform: translate(-100%, 35%);
       font-size: 1.8rem;
       cursor: pointer;
     }
