--- a/src/components/VideoComponent.css
+++ b/src/components/VideoComponent.css
@@ -1,23 +1,25 @@
 .video-responsive {
-    overflow: visible;
-    padding-top: 56.25%;
-    position: relative;
-    width: 100%;
+  text-align: center;
+  float: none;
+  clear: both;
+  position: relative;
+  width: 80%;
+  padding-bottom: 56.25%;
+  /* padding-top: 25px; */
+  height: 0;
+  margin: 0 auto;
   }
   
   .video-responsive iframe {
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    bottom: 0;
-    right: 0;
+    text-align: center;
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80%;
+
   }
   
   .video-title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background:  #242222;
   }
