--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,5 @@
 .hero-container {
-    /* background: url('../assets/entry-img2.png') center center/cover no-repeat; */
-    /* background-color: #242424; */
-    height: 93vh;
+    height: 89vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -13,15 +11,20 @@
 
 .hero-container > h1 {
     color: #fff;
-    font-size: 100px;
+    font-size: 85px;
     margin-top: -100px;
+    font-family: Courier;
+    -webkit-text-stroke: 2px white;
+    -webkit-text-fill-color: transparent;
+    /* opacity:0.3;
+    filter:alpha(opacity=30); */
 }
 
 .hero-container > p {
     margin-top: 8px;
     color: #fff;
     font-size: 32px;
-    font-family: Trebuchet;
+    font-family: Courier;
 }
 
 .hero-btns {
@@ -30,6 +33,7 @@
 
 .hero-btns .btn {
     margin: 6px;
+    font-family: Courier;
 }
 
 .fa-play-circle {
