--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -18,6 +18,7 @@
     align-items: center;
     height: 80px;
     max-width: 1500px;
+    font-family: Courier;
   }
   
   .navbar-logo {
@@ -29,6 +30,7 @@
     font-size: 2rem;
     display: flex;
     align-items: center;
+    font-family: Courier;
   }
   
   .fa-typo3 {
@@ -45,10 +47,12 @@
     width: 60vw;
     justify-content: end;
     margin-right: 2rem;
+    font-family: Courier;
   }
   
   .nav-item {
     height: 60px;
+    font-family: Courier;
   }
   
   .nav-links {
@@ -58,6 +62,7 @@
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
+    font-family: Courier;
   }
   
   .nav-links:hover {
@@ -121,6 +126,7 @@
       top: 0;
       left: 0;
       transform: translate(100%, 25%);
+      font-family: Courier;
     }
   
     .menu-icon {
